[tool.poetry]
name = "poetey"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
demo_python = {git = "ssh://git@github.com/eyallev25/demo-python.git", branch = "main"}
boto3 = "^1.20.24"
requests = "^2.26.0"
pyotp = "^2.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.12b0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
