[tool.poetry]
name = "baseline_image"
version = "0.0.1"
description = ""
authors = ["cyberarklabs"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.scripts]
baseline_test = 'baseline_image.benchmark_test.invoke_events:invoke_events'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
