[tool.poetry]
name = "anun_tests"
version = "0.0.1"
description = "anun tracer tests"
authors = ["cyberarklabs"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^6.1.2"
boto3 = "^1.20.26"
pydantic = "^1.8.2"
pytest-html = "^3.1.1"
docker = "^5.0.3"
requests = "^2.27.1"


[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^21.12b0"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
